--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/output.css" />
-    <title>Document</title>
-    <!-- <style>
-      * {
-        border: 1px solid red;
-      }
-    </style> -->
+    <link rel="stylesheet" href="output.css" />
+    <title>Payna</title>
   </head>
   <body class="font-Poppins">
     <!-- START: NAVBAR -->
@@ -18,7 +13,7 @@
       <nav class="flex items-center justify-between">
         <!-- Logo -->
         <div class="flex items-center gap-3">
-          <img src="/src/logo.jpg" alt="Logo" height="34" width="48" class="" />
+          <img src="src/logo.jpg" alt="Logo" height="34" width="48" class="" />
           <h1 class="text-2xl font-semibold">Payna</h1>
         </div>
         <!-- List menu -->
@@ -67,7 +62,7 @@
       </div>
       <!-- Right Section -->
       <div class="hidden justify-center lg:flex lg:w-1/2">
-        <img src="/src/hero.jpg" alt="" />
+        <img src="src/hero.jpg" alt="" />
       </div>
     </section>
     <!-- END: HERO SECTION -->
@@ -84,12 +79,12 @@
       <div
         class="grid grid-cols-3 mt-[30px] gap-6 md:flex md:justify-center md:gap-[50px] lg:mt-0"
       >
-        <img src="/src/apple.jpg" alt="" class="h-7" />
-        <img src="/src/adobe.jpg" alt="" class="h-7" />
+        <img src="src/apple.jpg" alt="" class="h-7" />
+        <img src="src/adobe.jpg" alt="" class="h-7" />
         <br class="md:hidden" />
-        <img src="/src/slack.jpg" alt="" class="h-7" />
-        <img src="/src/spotify.jpg" alt="" class="h-7" />
-        <img src="/src/google.jpg" alt="" class="h-7" />
+        <img src="src/slack.jpg" alt="" class="h-7" />
+        <img src="src/spotify.jpg" alt="" class="h-7" />
+        <img src="src/google.jpg" alt="" class="h-7" />
       </div>
     </div>
     <!-- END: BRAND SECTION -->
@@ -113,7 +108,7 @@
       class="grid grid-cols-1 gap-[60px] mx-6 mt-[50px] md:grid-cols-2 md:mt-[70px] md:mx-[66px] md:gap-12 lg:grid-cols-3 lg:mx-[120px]"
     >
       <div class="flex gap-6">
-        <img src="/src/business1.png" alt="" class="w-[60px] h-[60px]" />
+        <img src="src/business1.png" alt="" class="w-[60px] h-[60px]" />
         <div>
           <h3 class="text-xl font-semibold">Share Insights</h3>
           <p class="mt-3 leading-8 text-grey">
@@ -122,7 +117,7 @@
         </div>
       </div>
       <div class="flex gap-6">
-        <img src="/src/business2.png" alt="" class="w-[60px] h-[60px]" />
+        <img src="src/business2.png" alt="" class="w-[60px] h-[60px]" />
         <div>
           <h3 class="text-xl font-semibold">Offline Mode</h3>
           <p class="mt-3 leading-8 text-grey">
@@ -131,7 +126,7 @@
         </div>
       </div>
       <div class="flex gap-6">
-        <img src="/src/business3.png" alt="" class="w-[60px] h-[60px]" />
+        <img src="src/business3.png" alt="" class="w-[60px] h-[60px]" />
         <div>
           <h3 class="text-xl font-semibold">Kanban Mode</h3>
           <p class="mt-3 leading-8 text-grey">
@@ -140,7 +135,7 @@
         </div>
       </div>
       <div class="flex gap-6">
-        <img src="/src/business4.png" alt="" class="w-[60px] h-[60px]" />
+        <img src="src/business4.png" alt="" class="w-[60px] h-[60px]" />
         <div>
           <h3 class="text-xl font-semibold">Track Leads</h3>
           <p class="mt-3 leading-8 text-grey">
@@ -149,7 +144,7 @@
         </div>
       </div>
       <div class="flex gap-6">
-        <img src="/src/business5.png" alt="" class="w-[60px] h-[60px]" />
+        <img src="src/business5.png" alt="" class="w-[60px] h-[60px]" />
         <div>
           <h3 class="text-xl font-semibold">189 Country</h3>
           <p class="mt-3 leading-8 text-grey">
@@ -158,7 +153,7 @@
         </div>
       </div>
       <div class="flex gap-6">
-        <img src="/src/business6.png" alt="" class="w-[60px] h-[60px]" />
+        <img src="src/business6.png" alt="" class="w-[60px] h-[60px]" />
         <div>
           <h3 class="text-xl font-semibold">Reward System</h3>
           <p class="mt-3 leading-8 text-grey">
@@ -175,10 +170,10 @@
     >
       <!-- Left Section -->
       <div class="flex justify-center lg:w-1/2">
-        <img src="/src/productivity.png" />
+        <img src="src/productivity.png" />
         <a href="" class="absolute self-center">
           <img
-            src="/src/btn_play.svg"
+            src="src/btn_play.svg"
             alt=""
             class="h-[50px] w-[50px] md:h-[70px] md:w-[70px]"
           />
