added button back to top

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="output.css" />
     <link rel="shortcut icon" href="src/logo.svg" />
-
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Payna</title>
   </head>
   <body class="font-Poppins dark:bg-background">
@@ -108,6 +111,14 @@
       </div>
     </section>
     <!-- END: HERO SECTION -->
+
+    <!-- Back to top button -->
+    <button
+      id="back-to-top-btn"
+      class="hidden fixed bottom-4 right-4 z-50 bg-blueOcean p-5 text-white rounded-full hover:bg-blueOcean/80"
+    >
+      <span class="material-icons w-9 pt-1"> arrow_upward </span>
+    </button>
 
     <!-- START: BRAND SECTION -->
     <div
