--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h1 class="text-2xl font-semibold">Payna</h1>
         </div>
         <!-- List menu -->
-        <div class="space-x-12 hidden lg:flex">
+        <div id="list-menu" class="space-x-12 hidden lg:flex">
           <a href="#" id="home" class="">Home</a>
           <a href="#" id="features" class="">Features</a>
           <a href="#" id="showcase" class="">Showcase</a>
